--- a/WebMVC/Views/Shared/_Navbar.cshtml
+++ b/WebMVC/Views/Shared/_Navbar.cshtml
@@ -43,7 +43,7 @@
                         <a class="color-type-secondary" href="#" data-toggle="modal">Pricing</a>
                     </li>
                     <li>
-                        <a class="color-type-secondary" href="#">Documentation</a>
+                        <a class="color-type-secondary" asp-controller="Docs" asp-action="Index">Documentation</a>
                     </li>
                     <li>
                         <a class="color-type-secondary" asp-controller="Server" asp-action="Index">Servers</a>
