update home page

--- a/WebMVC/Views/Home/Index.cshtml
+++ b/WebMVC/Views/Home/Index.cshtml
@@ -14,11 +14,11 @@
                     Blazing fast, planet-scale VPN Services
                 </div>
                 <p>
-                    vpn service for highly available, globally distributed servers.
+                    
                 </p>
                 <div class="btn-group">
-                    <button class="btn btn-success" href="#">Start free</button>
-                    <button class="btn btn-secondary" href="#">Buy now</button>
+                    <a class="btn btn-success" href="http://login.antvpn.io/account/Register">Start free</a>
+                    <a class="btn btn-danger" href="#">Buy now</a>
                 </div>
             </div>
         </div>
@@ -31,12 +31,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-24 text-center">
-                <h3>This is a centered Heading 3</h3>
+                <h3>Alert! This is private alpha product. service  may interupt.</h3>
                 <div class="type-sh3">
-                    And this is it's Subheading 3
+                    vpn service for highly available, globally distributed servers.
                 </div>
                 <div class="col-md-12 col-md-offset-6">
-                    <div class="type-p3">You can create any Hero configuration with the combination of default settings and standard text/spacer classes. Take a look at the marukup to see it in action.</div>
+                    <div class="type-p3">
+                       Register now. get free 1Gb network traffic per month. feel free to <a class="btn-danger" asp-controller="Home" asp-action="ContactUs">contact us</a> to get more.
+                    </div>
                 </div>
             </div>
         </div>
