fix bug add styles

--- a/WebMVC/wwwroot/css/site.less
+++ b/WebMVC/wwwroot/css/site.less
@@ -67,3 +67,9 @@ a.navbar-brand {
 input.form-control, textarea.form-control {
     max-width: 486px;
 }
+
+.modal-body {
+    span{
+        color:red;
+    }
+}
