--- a/WebMVC/Views/Dashboard/Index.cshtml
+++ b/WebMVC/Views/Dashboard/Index.cshtml
@@ -178,7 +178,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="ConfirmPassword">Password</label>
+                        <label for="ConfirmPassword">Confirm Password</label>
                         <input asp-for="ConfirmPassword" class="form-control">
                         <span asp-validation-for="ConfirmPassword"></span>
                     </div>
