--- a/WebMVC/Views/Shared/_Navbar.cshtml
+++ b/WebMVC/Views/Shared/_Navbar.cshtml
@@ -38,7 +38,12 @@
                                 <li><a href="colors.html#mdl-alt-colors">MDL alt colors</a></li>
                             </ul>
                         </li>*@
-
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>
+                            <a class="color-type-secondary" asp-area="" asp-controller="Dashboard" asp-action="Index" data-toggle="modal">Dashboard</a>
+                        </li>
+                    }
                     <li>
                         <a class="color-type-secondary" href="#" data-toggle="modal">Pricing</a>
                     </li>
@@ -53,7 +58,7 @@
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#">Windows</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">Android</a></li>
+                            <li><a href="http://download.antvpn.io/strongSwan-1.8.2.apk">Android</a></li>
                             <li><a href="#">iOS</a></li>
                         </ul>
                     </li>
@@ -76,7 +81,6 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">@(User.FindFirst("preferred_username").Value)<i class="glyph glyph-chevron-down-2"></i></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a class="color-type-secondary" asp-area="" asp-controller="Dashboard" asp-action="Index" data-toggle="modal">Dashboard</a></li>
                                 <li class="divider"></li>
                                 <li><a asp-controller="Account" asp-action="Signout">Sign out</a></li>
                             </ul>
