--- a/WebMVC/Views/Dashboard/Index.cshtml
+++ b/WebMVC/Views/Dashboard/Index.cshtml
@@ -106,6 +106,7 @@
                                 </div>
                             </div>
                             <div class="item-content-expanded">
+                                <div class="content-text-primary text-right"><strong>Shadowsocks&trade; Port </strong>: @l.Port</div>
                                 <button class="btn btn-default configure" data-loginname="@l.LoginName" data-traffic="@l.MonthlyTraffic" data-toggle="modal" data-target="#modal-configure">Configure</button>
                                 <button class="btn btn-default reset-password" data-loginname="@l.LoginName" data-toggle="modal" data-target="#modal-resetpassword">Reset password</button>
                             </div>
