add GetSSAccountings ss password same as account password change LoginStatus for ss add cache for server copy function for server domain add Shadowsocks Protocal add Shadowsocks usage

--- a/WebMVC/Views/Dashboard/Index.cshtml
+++ b/WebMVC/Views/Dashboard/Index.cshtml
@@ -106,7 +106,8 @@
                                 </div>
                             </div>
                             <div class="item-content-expanded">
-                                <div class="content-text-primary text-right"><strong>Shadowsocks&trade; Port </strong>: @l.Port</div>
+                                <div class="content-text-primary text-right"><strong>Shadowsocks&trade; Port Number</strong>: @l.Port</div>
+                                <div class="content-text-primary text-right"><strong>Shadowsocks&trade; Usage </strong>: @l.SSMonthlyTrafficDisplay</div>
                                 <button class="btn btn-default configure" data-loginname="@l.LoginName" data-traffic="@l.MonthlyTraffic" data-toggle="modal" data-target="#modal-configure">Configure</button>
                                 <button class="btn btn-default reset-password" data-loginname="@l.LoginName" data-toggle="modal" data-target="#modal-resetpassword">Reset password</button>
                             </div>
