--- a/WebMVC/wwwroot/css/site.less
+++ b/WebMVC/wwwroot/css/site.less
@@ -21,6 +21,10 @@ a.navbar-brand {
     }
 }
 
+span.title {
+    color: @base;
+}
+
 #overview {
     padding-top: 2em;
     background-color: #F4F4F4;
