fix null ref exp show traffic monthly on servers add GetServerAcctNAsync add RedirectorServerName,TrafficServerName for ServerViewModelFactory add AcctS dashboard manage as tasks

--- a/WebMVC/Views/Manage/Index.cshtml
+++ b/WebMVC/Views/Manage/Index.cshtml
@@ -108,6 +108,12 @@
                                     Bandwidth Total: <strong>@server.BandwidthTotal</strong>
                                 </div>
                                 <div class="col-md-24">
+                                    Traffic In Total: <strong>@server.TrafficInDisplay</strong>
+                                </div>
+                                <div class="col-md-24">
+                                    Traffic Out Total: <strong>@server.TrafficOutDisplay</strong>
+                                </div>
+                                <div class="col-md-24">
                                     Last Updated: <strong>@server.DurationDisplay</strong>
                                 </div>
                             </div>
