--- a/WebMVC/Views/Shared/_Navbar.cshtml
+++ b/WebMVC/Views/Shared/_Navbar.cshtml
@@ -122,7 +122,16 @@
                             <li>Bug fixes.</li>*@
                         </ul>
                     </dd>
-
+                    <dt class="m-t-sm">2017.07.01</dt>
+                    <dd>
+                        <ul class="list-unstyled">
+                            <li>CI/CD</li>
+                            @*<li>Updated Bootstrap to v3.3.7.</li>
+                <li>Added <a href="components.html#entity-list">Entity list</a> and <a href="controls.html#putbox">Put box.</a></li>
+                <li>Added <code>!important</code> to spacer classes.</li>
+                <li>Bug fixes.</li>*@
+                        </ul>
+                    </dd>
                     @*<dt class="m-t-sm">0.5.8</dt>
                     <dd>
                         <ul class="list-unstyled">
